# ckks_cpu

./: .gitignore  CMakeLists.txt  build.sh
lib/src/: .gitignore
run/: CMakeLists.txt  main.cpp
